[tool.poetry]
name = "rainflow_detailed"
version = "0.1.0"
description = "Detailed rainflow cycle counting (fork of iamlakeme/rainflow)"
authors = ["Lechuan Piao"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PonySubway/rainflow_detailed"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
pytest = [
    { version = "~4", python = "~2.7" },
    { version = "*", python = "~3" },
    { version = "^6.2.5", python = "~3.10" },
]
importlib_metadata = { version = "*", python = "<3.8" }
more-itertools = { version = "<6", python = "~2.7" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
