[tool.poetry]
name = "rainflow-detailed"
version = "0.1.0"
description = "Detailed rainflow cycle counting (fork of iamlakeme/rainflow)"
authors = ["PonySubway"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PonySubway/rainflow_detailed"

packages = [
  { include = "rainflow.py", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
